Arreglo del pie de pagina

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         <p class="muted-note">HD = $2.00 → HN = $2.00 × 1.25 = $2.50. Si trabajó 5 horas nocturnas → Total nocturno = $2.50 × 5 = $12.50</p>
 
         <footer>
-          ¿Quieres integrar esto a un sitio (Django/Flask) o que genere un archivo descargable? Puedo adaptarlo.
+          Francisco Javier Lemus Cruz<br>
+          Rony Josue Sorto Villalta
         </footer>
       </aside>
     </div>
